--- a/q/274087.html
+++ b/q/274087.html
@@ -26,21 +26,45 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>139</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
-<tr d-ix="1"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
-<tr d-ix="2"><td>098</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
-<tr d-ix="3"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
-<tr d-ix="4"><td>056</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
-<tr d-ix="5"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
-<tr d-ix="6"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
+<tr d-ix="0"><td>154</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
+<tr d-ix="1"><td>138</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
+<tr d-ix="2"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
+<tr d-ix="3"><td>098</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
+<tr d-ix="4"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
+<tr d-ix="5"><td>056</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
+<tr d-ix="6"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
+<tr d-ix="7"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>152 142</s> 139 bytes</h1>
+<div id="pu0" class="pu"><h2>Javascript, 154 bytes</h2>
+<p>A function returning a string containing an SVG for inline insertion into a HTML page.</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>f=n=&gt;(b=(M=Math).PI/n,`&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M${Array.from(Array(n),(_,i)=&gt;[M.sin(a=2*i*b),M.cos(a)]+'A'+[r=(2+2*M.cos(b))**.5,r]+',0,00')}0,1&gt;`)</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=number size=2 min=3 step=2 oninput=w.setHTMLUnsafe(f(value|0))&gt;&lt;div id=w&gt;</code></pre>
+</div>
+</div>
+</p>
+<h3>Ungolfed</h3>
+<pre><code>f = n =&gt; {
+  b = Math.PI / n
+  s = '&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M'
+  s += Array.from(Array(n), (_, i) =&gt; {
+    a = 2 * i * b
+    p = [Math.sin(a), Math.cos(a)]
+    r = (2 + 2 * Math.cos(b)) ** 0.5
+    return p + 'A' + [r,r] + ',0,00'
+  })
+  return s += '0,1&gt;'
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>152 142</s> 138 bytes</h1>
 
-<pre class="lang-ruby prettyprint-override"><code>-&gt;n{s='&lt;svg viewBox=&quot;-50-50 99 99&quot;&gt;&lt;path d=&quot;M9 0'
+<pre class="lang-ruby prettyprint-override"><code>-&gt;n{s='&lt;svg viewBox=&quot;-50-9 99 18&quot;&gt;&lt;path d=&quot;M9 0'
 n.times{|j|s&lt;&lt;&quot;A#{r=9/(k=1i**(1.0/n)).imag} #{r} 0 0,0 %f %f&quot;%(9*k**(4*~j)).rect}
 s+'&quot;&gt;'}
 </code></pre>
-<p><a href="https://tio.run/##DcrdCoIwGIDhc6/iYyHTlTqpDgabUOddQXRg@dMUTdy0Qtetr8Fz9r7jdP/aStgo6xclMFdzDbMs3@fXR6DoSB1gzEEZH3L9hEKgCwOKvT7WsivVsjar4hydNssoWBK0IpWEBGlMkz4MY9nltQHXDFCgOwp@5SA/YKR124H8GneN5UMbT20xyrCxw6QVVNf9zf4B" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##DcrRCoIwGEDhe5/iZyHTlTqpoMEm1H1PEF1YqU3RxE0rdL36Gpy78w3j7WtLYaOsm5XAXE0VTLJ4n14fgaI9jRgwBukBZbzP9RMeAp0ZUOx1sZZtoealXhTn6LiaB8GSoBGpJCRIY5p0YRjLNq8MuGeAAt1Q8EsX8gNGGsd25Fc7NRR3bTy1xijDxvajVlBetlf7Bw" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>A function returning a string containing an SVG image such as the one below. The n points always fall on a circle of radius 9. The radius of curvature of the sides varies according to the value of <code>n</code>.</p>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
@@ -51,9 +75,9 @@ s+'&quot;&gt;'}
 <p><strong>Viewing notes</strong></p>
 <p>The SVG has been tested in Chrome and Edge. A concern has been raised about the lack of space between the two <code>-50</code>s defining coordinates of the corner of the viewbox, but that makes no difference to the output in either of these browsers.</p>
 <p>There is an issue with the browsers sizing the viewbox based on the width only and ignoring the height, requiring the user to scroll vertically. It is recommended to hit <code>Run code snippet</code> before expanding, to avoid getting a horizontally wide but vertically very short window requiring  excessive scrolling. Narrowing the browser window helps with this.</p>
-<p>I have reduced the radius of the output from 40 units to 9 units to make it easier to get the whole Reuleaux polygon into view (this also saves 3 bytes.) A possible further enhancement could be to reduce the height of the viewbox to help eliminate vertical scrolling (this could potentially save another 2 bytes.)</p>
+<p>I have reduced the radius of the output from 40 units to 9 units to make it easier to get the whole Reuleaux polygon into view (this also saves 3 bytes.) I have also reduced the height of the viewbox to help eliminate vertical scrolling (this saves another byte.)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 36 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 36 bytes</h1>
 <pre><code>t:!=ZFt9W:8W/qt!J*+le-|wq|X&gt;&gt;a[]e0YG
 </code></pre>
 <p>Try at <a href="https://matl.io/?code=t%3A%21%3DZFt9W%3A8W%2Fqt%21J%2a%2Ble-%7Cwq%7CX%3E%3Ea%5B%5De0YG&amp;inputs=5&amp;version=22.8.0" rel="nofollow noreferrer"><strong>MATL Online</strong></a>!</p>
@@ -83,7 +107,7 @@ a      % Any. Gives a row vector of length 512^2, containing 1 if the pixel
 0YG    % Write as image file. Implicitly display
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>116</s> <s>111</s> 98 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>116</s> <s>111</s> 98 bytes</h1>
 <p><em>Edit: no longer requiring <code>r</code>adius to be given as an input saves 13 bytes.</em></p>
 
 <pre class="lang-r prettyprint-override"><code>\(n,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(i~\(x)i~\(y)all(abs(x+y*1i-v)&lt;R))
@@ -92,7 +116,7 @@ a      % Any. Gives a row vector of length 512^2, containing 1 if the pixel
 (note that rdrr.io runs on an earlier version of <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> that does not use the <code>\</code> syntax for a function definition, so the code in the link is 21 bytes longer)</p>
 <p><a href="https://i.sstatic.net/2w4U96M6.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2w4U96M6.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu3" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
+<div id="pu4" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
 <pre><code>to r:n
 repeat:n[pd arc 90 180/:n pu fd 90 rt 180-180/:n]
 end
@@ -103,7 +127,7 @@ r 5
 </code></pre>
 <p>(Substitute your desired value for <code>5</code>.)</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>58</strike> 56 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu5" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>58</strike> 56 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>-2 bytes due to unused variable assignment <code>B←</code>.</p>
 <p>A dfn that takes the number of edges and outputs a bitmap of the shape.</p>
 <pre><code>{(C-C⊖⍨⌈⍵÷2)∧.&gt;⍥|C∘.-I∘.+0J1×I←40÷⍨¯41+⍳81⊣C←¯1*⍵÷⍨+⍨⍳⍵}
@@ -118,18 +142,18 @@ r 5
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=q9Zw1nV@1DXtUe@KRz0dj3q3Ht5upPmoY7me3aPepTXOjzpm6Ol6gkhtAy/Dw9M9H7VNMDE4vB2o/NB6E0PtR72bLQwfdS12BoofWm@oBTYAKKkNMq93M5BbCwA&amp;f=S3/UNqHaSF9dT1k92lD7Ue/W2FqFR71zFUryFdLyi3ITSxRKMlIVkjJLchMLuNIV0hSMwaQpmDQHk5ZcAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 64 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 64 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from turtle import*
 def f(n,d):
  for c in[0,d]*n:circle(c,180/n)
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY3HdKK8nMVSkqLSnJSFTJzC_KLSrS4UlLTFNI08nRSNK24FNLyixSSFTLzog10UmK18qySM4uSc1I1knUMLQz08zQh5kCNgxkLAA" rel="nofollow noreferrer">ATO Does not work for this (missing <code>_tkinter</code>)!</a>
+<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY3HdKK8nMVSkqLSnJSFTJzC_KLSrS4UlLTFNI08nRSNK24FNLyixSSFTLzog10UmK18qySM4uSc1I1knUMLQz08zQh5kCNgxkLAA" rel="noreferrer">ATO Does not work for this (missing <code>_tkinter</code>)!</a>
 Nor does TIO.</p>
 <p>History: 80,82,64.</p>
 <h2>How?</h2>
 <p>Observing that the arc lengths always sum to half a full circle we let the turtle draw a circle omitting every other of a total of <span class="math-container">\$2n\$</span> equal length arcs</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 62 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 62 bytes</h1>
 <pre><code>Graphics[ResourceFunction[&quot;ReuleauxPolygon&quot;][Input[],Input[]]]
 </code></pre>
 <p>Of course Wolfram has a way to do this. First input is arc radius, and second is <span class="math-container">\$n\$</span> number of sides.</p>
