--- a/q/235366.html
+++ b/q/235366.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>Wolfram Language Mathematica</td><td>210916T032325Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235390#235390">att</a></td></tr>
-<tr d-ix="1"><td>042</td><td>JavaScript Node.js</td><td>240711T234631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274105#274105">l4m2</a></td></tr>
-<tr d-ix="2"><td>040</td><td>Octave</td><td>240711T163451Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274088#274088">int 21h </a></td></tr>
-<tr d-ix="3"><td>034</td><td>Julia</td><td>220220T163026Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/243133#243133">David Sc</a></td></tr>
-<tr d-ix="4"><td>131</td><td>Lean</td><td>211005T220522Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/236062#236062">Wheat Wi</a></td></tr>
-<tr d-ix="5"><td>068</td><td>Python 3.8 prerelease</td><td>211006T000714Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/236065#236065">Stephen </a></td></tr>
-<tr d-ix="6"><td>020</td><td>Charcoal</td><td>211001T191452Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235896#235896">Neil</a></td></tr>
-<tr d-ix="7"><td>014</td><td>Pip x</td><td>210920T024807Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235540#235540">DLosc</a></td></tr>
-<tr d-ix="8"><td>165</td><td>Pascal FPC</td><td>210919T195348Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235535#235535">jdt</a></td></tr>
+<tr d-ix="0"><td>154</td><td>Pascal FPC</td><td>210919T195348Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235535#235535">jdt</a></td></tr>
+<tr d-ix="1"><td>030</td><td>Wolfram Language Mathematica</td><td>210916T032325Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235390#235390">att</a></td></tr>
+<tr d-ix="2"><td>042</td><td>JavaScript Node.js</td><td>240711T234631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274105#274105">l4m2</a></td></tr>
+<tr d-ix="3"><td>040</td><td>Octave</td><td>240711T163451Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274088#274088">int 21h </a></td></tr>
+<tr d-ix="4"><td>034</td><td>Julia</td><td>220220T163026Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/243133#243133">David Sc</a></td></tr>
+<tr d-ix="5"><td>131</td><td>Lean</td><td>211005T220522Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/236062#236062">Wheat Wi</a></td></tr>
+<tr d-ix="6"><td>068</td><td>Python 3.8 prerelease</td><td>211006T000714Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/236065#236065">Stephen </a></td></tr>
+<tr d-ix="7"><td>020</td><td>Charcoal</td><td>211001T191452Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235896#235896">Neil</a></td></tr>
+<tr d-ix="8"><td>014</td><td>Pip x</td><td>210920T024807Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235540#235540">DLosc</a></td></tr>
 <tr d-ix="9"><td>066</td><td>C clang</td><td>210915T225152Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235375#235375">jdt</a></td></tr>
 <tr d-ix="10"><td>051</td><td>Ruby</td><td>210917T075814Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235462#235462">G B</a></td></tr>
 <tr d-ix="11"><td>020</td><td>Pari/GP</td><td>210917T031828Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235457#235457">alephalp</a></td></tr>
@@ -52,7 +52,15 @@
 <tr d-ix="23"><td>047</td><td>Factor + math.combinatorics</td><td>210915T231621Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235377#235377">chunes</a></td></tr>
 <tr d-ix="24"><td>006</td><td>Jelly</td><td>210915T200501Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235367#235367">caird co</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 30 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.freepascal.org/" rel="nofollow noreferrer">Pascal (FPC)</a>, <s>165</s> 154 bytes</h1>
+
+<pre class="lang-pascal prettyprint-override"><code>function f(a:array of word):word;var n,i,c,r:word;begin
+n:=high(a)+1;c:=1;r:=1;for i:=1 to n do begin
+if a[i-1]&lt;&gt;c then r:=0;c:=c*(n-i)div i;end;f:=r;end;
+</code></pre>
+<p><a href="https://tio.run/##NU5BjsIwELvzCh8TSCuyWvaQUD6COIS0oSOhSTUUKl5fUqo9jGVZ9thDeMRwr9IQ5zk9OY6UGUkFF0TCGzlhytJqt6B/BQEbMtHIKly7G/GGXdPTrVdB76yPrrFeFkhZQIVgzGC0GaubEsKZKns5niLGvmMU937Jxa3iinRLL5DvuPXJNfIl89IseXL4zjrbuj5c/sehgbLm1/yV@9F@s9YAmITGTiVVgrro5VE9fwA" rel="nofollow noreferrer" title="Pascal (FPC) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 30 bytes</h1>
 <pre><code>(i=-1;r=++i&amp;/@#)!#==i!/(i-r)!&amp;
 </code></pre>
 <p><a href="https://tio.run/##RY7BCoMwDIbvvoUUimKKbWf1MDp8hMGOY4cik@Wgh9Jb0VfvWqwbCcmfH5Ivi3Gf92IcTibMOlSombha3TRI25HUJdEay7ZCZuuShrvF1T0Ju80jedH9MZl194UXG8QCErK4xMhSgeAp1Wn0IBRInmp/egPIuKRSyjQlu/AyXz1aFhy6GPwH5H@qjNQugvrzCXWA0y/FFr4" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -63,7 +71,7 @@
 <p><a href="https://tio.run/##RY7BCsIwDIbve43BLsuwrWs9SMWDeBY8DoUynObQCbW3sr16TVmnJCR/fki@WONfD2s89iYOOp7d257wif7TlYC64Xun6xqrzbG8aVLujlW8OBx9VzaHgdxqvvZmnEMR@ARUQEAWW4osJXCWUq6GAi5BsFTV6u1A0JJMKdKU7CKIfHVpWTBoKdgPyP5UQdSWQGp9Qi7g9EsxxS8" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Checks that the polynomial of degree <span class="math-container">\$n\$</span> in <span class="math-container">\$x\$</span> with these coefficients is equal to <span class="math-container">\$(x+1)^n\$</span> by testing it at <span class="math-container">\$0,...,n\$</span>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 42 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 42 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a+-1==a.map((v,i)=&gt;n=i?n*a[1]--/i:1)+-n
 </code></pre>
@@ -76,7 +84,7 @@
 <p><a href="https://tio.run/##dZBRC8IgFIXf@yNTuBtqc0HgeusX9Lb2IKtZsVQ2C/r1S9tLkXIPguceuJzvJp9y6sardbk2p/PcCy8pauSELO7SIi1qJXSuQAmCcWGNRXgnhaDbHjk8d0ZPZjgXg1Eoaw7jw11ebYZX336PGtrifw8YxP21n/iGAyVBPLGvgHJgJLxVIrIB5i/wIBZ@n9RPLDvqZi@HKVaExYtE3bhPoPRDUkBIkgrzVErfvEow4wuYBd38Bg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Mine.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a>, 40 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a>, 40 bytes</h1>
 
 <pre class="lang-matlab prettyprint-override"><code>@(x)all(bincoeff((n=sum(x|1)-1),0:n)==x)
 </code></pre>
@@ -84,7 +92,7 @@
 <p>Port of <a href="https://codegolf.stackexchange.com/a/235367/52210"><em>@cairdCoinheringaahing</em>'s Jelly answer</a>.
 Based on the <code>bincoeff</code> function that outputs <span class="math-container">\$n^{th}-1\$</span> line of the triangle.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://julialang.org/" rel="nofollow noreferrer">Julia</a>, <s>47</s> <s>38</s> 34 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://julialang.org/" rel="nofollow noreferrer">Julia</a>, <s>47</s> <s>38</s> 34 bytes</h1>
 <pre><code>!l=binomial.((n=[l;0][2];),0:n)==l
 </code></pre>
 <p><a href="https://tio.run/##VY7BCsMgEETv/kVuEaToJhpo8EtCDulhIcXaUlLo39td7SGLovNm0Zn7J@2b@5bSpXjb8/Oxb@nS9zkuabbrAuusjb1mHWMqGDt12Li4VR2OLsMCWECVA8uBFsPI4I2zvH21PFvBOG/A8hmqG9idDNBTzxuYaKCQMmBV2BJI1P@bpN/B1EXg/xVs64Gh8WBGCg5kTK2Yb1VqP/V67/lIucf@sFqf0UkEiYPEUaKXGE54HqDMQJmBMgNlBsoMDBInrcsP" rel="nofollow noreferrer">Try it online!</a></p>
@@ -93,7 +101,7 @@ Based on the <code>bincoeff</code> function that outputs <span class="math-conta
 <p>Thanks to amelies, we can get it down to 38 bytes!</p>
 <p>Thanks to MarkMush, we can get it further down to 34 bytes!</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://leanprover.github.io/" rel="nofollow noreferrer">Lean</a>, <s>187</s> <s>176</s> <s>143</s> 131 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://leanprover.github.io/" rel="nofollow noreferrer">Lean</a>, <s>187</s> <s>176</s> <s>143</s> 131 bytes</h1>
 <pre><code>def q:list ℕ→bool:=λx,by{induction x,exact[],apply(::)1,induction x_ih with h t i,exact[],cases t,exact[h],exact(h+t_hd)::i}=x
 </code></pre>
 <p><a href="https://tio.run/##y0lNzPv/PyU1TaHQKiezuEThUcvUR22TkvLzc6xsz@2u0EmqrM7MSylNLsnMz1Oo0EmtSEwuiY7VSSwoyKnUsLLSNNRBko7PzFAozyzJUMhQKFHIhCtOTixOLVYogfIzYiEMjQztkviMFE0rq8xa24r/yqlliTkKGoXRhrGaXAiODhrXCF3AGAjRhEx0zIAYQxBNyAih7j8A" rel="nofollow noreferrer" title="Lean – Try It Online">Try it online!</a></p>
@@ -107,7 +115,7 @@ def g:list ℕ→bool:=λx,f(x.length)=x
 <p>This is the straightforward way to do things.</p>
 <p>The shorter version rolls these two into one.  Instead of doing induction on the length of the list, it just does induction on the list itself.  This turns the already hairy induction into a real mess.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <strike>71</strike> 68 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <strike>71</strike> 68 bytes</h1>
 <pre><code>lambda l:[*map(math.comb,(a:=len(l))*[a-1],range(a))]==l
 import math
 </code></pre>
@@ -120,7 +128,7 @@ import math
 <p><a href="https://tio.run/##BcExDoAgDADA3VcwtgQH40bCS4xDVRSSFgh28fV41z5NtaxjMMlxkWHP@VUQanBWORyQDxwLMKLdaF5216k8EQgRQ@Dp7lWMkCaTpdWudowf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Happily, Python has a built-in combination function. This just uses a simple mapping of that to build the row of Pascal's triangle corresponding to the length of the input list and compares that to the input.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 20 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 20 bytes</h1>
 <pre><code>⬤θ⎇κ⁼×⁻Ｌθκ§θ⊖κ×κι⁼¹ι
 </code></pre>
 <p><a href="https://tio.run/##LYw9C8JAEET/ypW7cBYBsbEKaCEoWKQLKY7LYo7brNxHRH/9eYkWM/AY3tjJRPs0XMo9OsnQMkPQqqMoJn7Aa3UOi@EEnZspwc3JkuBK8sgTBNTK17T5IiO9V@9ENtJMkmkEj1jHn1d/3Er/s2ZDxGMpfV9hr9Vh62YYyu7FXw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if it's a row, nothing if not. Explanation: The first element must always be <code>1</code>. Subsequent elements obey the recurrence relation that the previous element multiplied by the inclusive number of elements remaining equals the current element multiplied by its index.</p>
@@ -136,7 +144,7 @@ import math
                         Implicitly print
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-x</code>, <s>20</s> 14 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-x</code>, <s>20</s> 14 bytes</h1>
 <pre><code>L#al+:lPE!ll=a
 </code></pre>
 <p><a href="https://replit.com/@dloscutoff/pip" rel="nofollow noreferrer">Try it here!</a> TIO doesn't support the <code>-x</code> flag, but you can simulate it using the header: <a href="https://tio.run/##K8gs@B9mlfjfRzkxR9sqJ8BVMSfHNvH////RhgrGQGgYCwA" rel="nofollow noreferrer" title="Pip – Try It Online">Try it online!</a></p>
@@ -150,14 +158,6 @@ L               Loop
    l+:            Add to l itemwise and assign back to l
            l=a  1 if l equals a, 0 otherwise
 </code></pre>
-</div>
-<div id="pu8" class="pu"><h1><a href="https://www.freepascal.org/" rel="nofollow noreferrer">Pascal (FPC)</a>, 165 bytes</h1>
-
-<pre class="lang-pascal prettyprint-override"><code>function f(a:Array of Integer):integer;var i,n,c:Integer;begin
-i:=1;c:=1;f:=1;n:=High(a)+1;for i:=1 to n do begin
-if a[i-1]&lt;&gt;c then f:=0;c:=Trunc(c*(n-i)/i);end;end;
-</code></pre>
-<p><a href="https://tio.run/##TU67DsIwDNz5Co8JtIUiYEgoEhvsbBVDCEmxhBwUAhVfXxxgYLiTddY9buZuzbX0NzsM/kE2YSDwwqhtjOYFwcOekutclAq/h36aCFhQYdXvpU@uQxqhamptM/lMpJoddhdh5ISVwB5WIQUgOAf4WTyYFsv6uN5YSBfH1aqZ5ZBD5DHCjgWVKKcotaPzB0Ouj6FXYPLCtq6q5fFvJzQg6mJRrBhzqUffIgDoIyYnvGCvZJ2zquEN" rel="nofollow noreferrer" title="Pascal (FPC) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu9" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 66 bytes</h1>
 
