--- a/q/274092.html
+++ b/q/274092.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>037</td><td>JavaScript V8</td><td>240713T224123Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274151#274151">Andrew B</a></td></tr>
+<tr d-ix="0"><td>028</td><td>JavaScript V8</td><td>240713T224123Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274151#274151">Andrew B</a></td></tr>
 <tr d-ix="1"><td>030</td><td>Retina</td><td>240713T185622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274145#274145">Neil</a></td></tr>
 <tr d-ix="2"><td>014</td><td>Desmos</td><td>240713T160252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274143#274143">Aiden Ch</a></td></tr>
 <tr d-ix="3"><td>005</td><td>J</td><td>240712T014603Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274110#274110">noodle p</a></td></tr>
@@ -63,11 +63,11 @@
 <tr d-ix="34"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
 <tr d-ix="35"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 37 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 28 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;x.reduce((a,c)=&gt;a+Math.pow(c,c),0)
+<pre class="lang-javascript prettyprint-override"><code>x=&gt;x.reduce((a,c)=&gt;a+c**c,0)
 </code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNEts/ifZvu/wtauQq8oNaU0OVVDI1EnWdPWLlHbN7EkQ68gv1wjGSigY6D5Pzk/rzg/J1UvJz9dI00j2kTHTMc8VlPzPwA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y0osSyxOLsosKNEts/ifZvu/wtauQq8oNaU0OVVDI1EnWdPWLlE7WUsrWcdA839yfl5xfk6qXk5@ukaaRrSJjpmOeaym5n8A" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 30 bytes</h1>
 <pre><code>~[&quot;L$`^¶$.(&quot;|&quot;&quot;L$`.+
