--- a/q/12028.html
+++ b/q/12028.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>R</td><td>240704T173403Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/273925#273925">int 21h </a></td></tr>
-<tr d-ix="1"><td>074</td><td>JavaScript Node.js</td><td>240704T192740Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/273926#273926">l4m2</a></td></tr>
+<tr d-ix="0"><td>072</td><td>JavaScript Node.js</td><td>240704T192740Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/273926#273926">l4m2</a></td></tr>
+<tr d-ix="1"><td>079</td><td>R</td><td>240704T173403Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/273925#273925">int 21h </a></td></tr>
 <tr d-ix="2"><td>066</td><td>Perl 5.10 or higher</td><td>180202T073556Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/154628#154628">Ton Hosp</a></td></tr>
 <tr d-ix="3"><td>071</td><td>Haskell</td><td>180202T091131Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/154630#154630">Laikoni</a></td></tr>
 <tr d-ix="4"><td>229</td><td>C#</td><td>130815T185939Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12310#12310">user8865</a></td></tr>
@@ -40,13 +40,21 @@
 <tr d-ix="11"><td>120</td><td>Python2</td><td>130711T071450Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12036#12036">Bakuriu</a></td></tr>
 <tr d-ix="12"><td>254</td><td>Python 2</td><td>130711T053319Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12033#12033">miles</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 79 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 72 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=x=&gt;(i=1,k=x.find(c=&gt;c&gt;x[i++]))?[i,2,i--,...f(x,x[i-1]=x[i],x[i]=k)]:[]
+</code></pre>
+<p><a href="https://tio.run/##bYzNCoMwEITvPkVu7mISattTIfYRelVCDhKTkihG/EMofXYbC711L7szs9/4eq0nPbphZn1ozL5bsYkCnMhpKzZuXd@AFoUuNumyTCHepaNn6hijnHMLG40By5WISx23Ei2qm1R7SQSR1/h7oblKqqgsyMiUChMbRgKeBEsqJK@ExNGhn0JneBeeUFLi8eseJSWfOqcNnKhHPprVjJMB5BHQ9Qy/1CMm739N6WOZh2VOcf8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Bubble sort</p>
+<p>Not directly comparable as I didn't do IO. Also <code>reverse</code> is long</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 79 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(v)for(j in sum(v|1):2){v[1:w]=v[(w=which.max(v)):1];v=rev(v[-1]);cat(w,j,&quot;&quot;)}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3_WM0yjTT8os0shQy8xSKS3M1ymoMNa2MNKvLog2tymNty6I1ym3LMzKTM_RyEyuAijWtDGOty2yLUss0yqJ1DWM1rZMTSzTKdbJ0lJQ0a6HGtqVpJGuY6ZjqmOgY6hjpGGtCVCnF5ClpcoHkTECiOoYY4mDVQF2maDIg61Bk0TVCJVCNhLhmwQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>A function that takes in an unsorted array and prints out the flipping sequence to sort the array. The algorithm is the one described on Wikipedia<a href="https://en.m.wikipedia.org/wiki/Pancake_sorting" rel="nofollow noreferrer"><sup>1</sup></a>.</p>
 <ul>
-<li><code>for(j in sum(v|1):1)</code> run <span class="math-container">\$n-1\$</span> iterations, where <span class="math-container">\$n\$</span> is the size of the array to sort;</li>
+<li><code>for(j in sum(v|1):2)</code> run <span class="math-container">\$n-1\$</span> iterations, where <span class="math-container">\$n\$</span> is the size of the array to sort;</li>
 <li><code>w=which.max(v)</code> find the position of the largest number;</li>
 <li><code>v[1:w]=v[w:1]</code> insert the spatula between the largest pancake and the next one. Flip the upper pancakes so that the largest one gets on top;</li>
 <li><code>v=rev(v[-1])</code> flip the whole heap of pancakes, so that the largest is at the bottom and remove it from the heap;</li>
@@ -54,14 +62,6 @@
 </ul>
 <p>Now, the resulting sequence will always have <span class="math-container">\$(n-1)×2\$</span> flips, which is unnecessary long. Some flips could be skipped, like <code>1</code> or two flips of the whole stack - both of them do not change the order of pancakes. For instance, the sequence <code>6 5 4 1 2 3</code> will produce the flip sequence <code>1 6 5 5 4 4 1 3 2 2</code>, in which only <code>6</code> and <code>3</code> are important - other flips could be ignored.
 The reason why those redundant flips do appear in the output is to have the code as short as possible.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 74 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=x=&gt;(i=0,k=x.find(c=&gt;c&gt;x[++i]))?[i+1,2,i+1,...f(x,x[i-1]=x[i],x[i]=k)]:[]
-</code></pre>
-<p><a href="https://tio.run/##bUxLCoMwEN17iuw6gzFo21Uh9gjdKiELiUlJFCP@CJSe3cZCd53FzPvMe67ZmllNdlyywbd63w0PvATLc9rxwIwdWlC8VGUQaWol4l3YtKBnemzGmIFAg7BZIXk88sCSdyhvQu4V4URc4@@FFjKpIzMgYqaSmBg/EXDEG1IjeSUkjvLD7HvNev@EihKHX/UoqdjcW6Uhpw7ZpDc9zRqQxYBqFvi5DjF5/2s6PdZlXJcT7h8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Bubble sort</p>
-<p>Not directly comparable as I didn't do IO. Also <code>reverse</code> is long</p>
 </div>
 <div id="pu2" class="pu"><h1>Perl 5.10 (or higher), 66 bytes</h1>
 
